// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM Transaction Duration Transform Generator does not include the query filter when params are '*' 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "match": Object {
          "transaction.root": true,
        },
      },
      Object {
        "range": Object {
          "@timestamp": Object {
            "gte": "now-7d",
          },
        },
      },
    ],
  },
}
`;

exports[`APM Transaction Duration Transform Generator returns the expected transform params for timeslices slo 1`] = `
Object {
  "_meta": Object {
    "version": 1,
  },
  "dest": Object {
    "index": "slo-observability.sli-v1",
    "pipeline": "slo-observability.sli.monthly",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "_numerator": Object {
        "range": Object {
          "field": "transaction.duration.histogram",
          "ranges": Array [
            Object {
              "to": 500000,
            },
          ],
        },
      },
      "slo.denominator": Object {
        "value_count": Object {
          "field": "transaction.duration.histogram",
        },
      },
      "slo.isGoodSlice": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "goodEvents": "slo.numerator.value",
            "totalEvents": "slo.denominator.value",
          },
          "script": "params.goodEvents / params.totalEvents >= 0.95 ? 1 : 0",
        },
      },
      "slo.numerator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "numerator": "_numerator['*-500000.0']>_count",
          },
          "script": "params.numerator",
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "@timestamp",
          "fixed_interval": "2m",
        },
      },
      "slo.id": Object {
        "terms": Object {
          "field": "slo.id",
        },
      },
      "slo.revision": Object {
        "terms": Object {
          "field": "slo.revision",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
  },
  "source": Object {
    "index": "metrics-apm*",
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "match": Object {
              "transaction.root": true,
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "gte": "now-7d",
              },
            },
          },
          Object {
            "match": Object {
              "service.name": "irrelevant",
            },
          },
          Object {
            "match": Object {
              "service.environment": "irrelevant",
            },
          },
          Object {
            "match": Object {
              "transaction.name": "irrelevant",
            },
          },
          Object {
            "match": Object {
              "transaction.type": "irrelevant",
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {
      "slo.id": Object {
        "script": Object {
          "source": Any<String>,
        },
        "type": "keyword",
      },
      "slo.revision": Object {
        "script": Object {
          "source": "emit(1)",
        },
        "type": "long",
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "@timestamp",
    },
  },
  "transform_id": Any<String>,
}
`;

exports[`APM Transaction Duration Transform Generator returns the expected transform params with every specified indicator params 1`] = `
Object {
  "_meta": Object {
    "version": 1,
  },
  "dest": Object {
    "index": "slo-observability.sli-v1",
    "pipeline": "slo-observability.sli.monthly",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "_numerator": Object {
        "range": Object {
          "field": "transaction.duration.histogram",
          "ranges": Array [
            Object {
              "to": 500000,
            },
          ],
        },
      },
      "slo.denominator": Object {
        "value_count": Object {
          "field": "transaction.duration.histogram",
        },
      },
      "slo.numerator": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "numerator": "_numerator['*-500000.0']>_count",
          },
          "script": "params.numerator",
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "@timestamp",
          "fixed_interval": "1m",
        },
      },
      "slo.id": Object {
        "terms": Object {
          "field": "slo.id",
        },
      },
      "slo.revision": Object {
        "terms": Object {
          "field": "slo.revision",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
  },
  "source": Object {
    "index": "metrics-apm*",
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "match": Object {
              "transaction.root": true,
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "gte": "now-7d",
              },
            },
          },
          Object {
            "match": Object {
              "service.name": "irrelevant",
            },
          },
          Object {
            "match": Object {
              "service.environment": "irrelevant",
            },
          },
          Object {
            "match": Object {
              "transaction.name": "irrelevant",
            },
          },
          Object {
            "match": Object {
              "transaction.type": "irrelevant",
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {
      "slo.id": Object {
        "script": Object {
          "source": Any<String>,
        },
        "type": "keyword",
      },
      "slo.revision": Object {
        "script": Object {
          "source": "emit(1)",
        },
        "type": "long",
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "@timestamp",
    },
  },
  "transform_id": Any<String>,
}
`;
